# Pawrrtal-AI

./: .beans.yml  .docignore  .gitignore  .gitleaksignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .sweep-lessons.json  AGENTS.md  CHANGELOG.md  DESIGN.md  LICENSE  README.md  biome.json  check-policies.mjs  commit.ts  dev.ts  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  justfile  lefthook.yml  nexus.db  package-lock.json  package.json  pnpm-lock.yaml  portless.json  react-doctor.config.json  repomix.config.json  skills-lock.json  tasks.ts  tsconfig.json
backend/: .dockerignore  .env.docker  .env.docker.example  .env.example  .importlinter  Dockerfile  alembic.ini  main.py  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 000_initial_schema.py  001_add_conversation_metadata_fields.py  002_add_model_id_to_conversations.py  003_add_chat_messages_table.py  004_add_conversation_labels.py  005_add_projects_and_conversation_project_fk.py  006_add_user_personalization.py  007_add_channel_bindings_and_link_codes.py  007_add_user_appearance.py  008_add_workspaces.py  009_unique_default_workspace_per_user.py  010_drop_api_keys.py  011_add_channel_columns_and_attachment.py  012_add_lcm_tables.py  012_canonicalise_conversation_model_ids.py  012_drop_user_preferences_and_personalization.py  012_governance_and_jobs.py  013_governance_and_jobs.py  014_drop_active_conversation_id.py  015_add_lcm_tables.py
backend/app/: db.py  governance_models.py  governance_schemas.py  logger_setup.py  models.py  schemas.py  users.py
backend/app/api/: _chat_cost_budget.py  _chat_events.py  _chat_permissions.py  _chat_setup.py  appearance.py  audit.py  auth.py  channels.py  chat.py  conversations.py  cost.py  exports.py  health.py  models.py  oauth.py  personalization.py  projects.py  scheduled_jobs.py  stt.py  users.py  workspace.py  workspace_env.py
backend/app/channels/: __init__.py  base.py  (+6 more)
backend/tests/: agent_harness.py  conftest.py  test_agent_loop.py  test_agent_loop_safety.py  test_agent_loop_scenarios.py  test_agent_tools.py  test_agents_md.py  test_allowed_user.py  test_appearance_crud.py  test_artifact_tool.py  test_catalog.py  test_channels.py  test_channels_api.py  test_chat_aggregator.py  test_chat_api.py  test_chat_message_crud.py  test_chat_request_images.py  test_claude_provider.py  test_claude_provider_pr05.py  test_claude_stream_fn.py  test_claude_tool_bridge.py  test_codex_auth.py  test_conversation_api.py  test_conversation_crud.py  test_conversation_helpers.py  test_conversation_read.py  test_cost_tracker.py  test_event_bus.py  test_event_bus_handlers.py  test_exa_search.py  test_exa_search_agent.py  test_exporters.py  test_gemini_manual_function_calling.py  test_gemini_stream_fn.py  test_governance_audit.py  test_governance_bash_boundary.py  test_governance_permissions.py  test_health.py  test_health_api.py  test_image_gen.py  (+44 more)
e2e-browser-use/: .gitignore  README.md  pyproject.toml
e2e-browser-use/tests/: conftest.py  test_archived_chats.py  test_chat_streaming.py  test_create_project.py  test_logout.py  test_onboarding_personalization.py  test_search.py  test_settings_navigation.py
(+2437 files in other folders)
