[project]
name = "pawrrtal-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.27.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.22.1",
    "anyio>=4.0.0",
    "claude-agent-sdk",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "fastapi[standard]>=0.136.0",
    "google-genai>=1.56.0",
    "mcp>=1.27.0",
    "psycopg>=3.3.3",
    "pydantic>=2.12.5,<2.13",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy-utils>=0.42.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
]

# Without `explicit_package_bases`, mypy collapses `app/api/channels.py`
# and `app/channels/__init__.py` into a single ``channels`` module name
# and aborts with "duplicate module" before checking anything else.
# Naming the package roots makes mypy resolve them as `app.api.channels`
# and `app.channels`, which are distinct.
[tool.mypy]
files = ["app", "tests"]
explicit_package_bases = true
namespace_packages = true
# ``app/core/agents.py`` and ``app/core/providers/agno_provider.py`` are
# the agno-based experiment that's been superseded by the gemini and
# claude providers; nothing imports them outside their own module pair.
# Excluding them from mypy avoids chasing typing through a dead branch.
exclude = [
    "^app/core/agents\\.py$",
    "^app/core/providers/agno_provider\\.py$",
]

# sqlalchemy_utils ships without ``py.typed`` so mypy whines on every
# import. We use the encrypted-string column type and that's it; ignore
# the missing stubs rather than maintain a private stub file.
[[tool.mypy.overrides]]
module = ["sqlalchemy_utils.*"]
ignore_missing_imports = true

# ``alembic/env.py`` and ``tests/conftest.py`` need to mutate ``sys.path``
# (or read ``alembic.config`` state) before they can import the
# application package. Permitting non-top-level imports in those two
# files lets us keep ruff's E402 enabled everywhere else.
[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]
"tests/conftest.py" = ["E402"]

# Bandit configuration — the pre-commit hook reads this file. Skip
# ``app/cli/`` (developer tooling that legitimately shells out to
# ``git`` and is never reachable from a request handler), matching the
# intent the pre-commit comment already documents
# ("tests/cli are excluded by config").
[tool.bandit]
exclude_dirs = ["app/cli"]
